# qtsandbox

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  qt.conf.sample
example1/: CMakeLists.txt  README.md
example1/src/: main.cpp
example2/: CMakeLists.txt
example2/src/: main.cpp
src/: main.cpp  main.cpp.sample
src/examples/: main.cpp.group-anim
